--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,6 @@
 html {
+    -webkit-scroll-behavior: smooth;
+       -ms-scroll-behavior: smooth;
     scroll-behavior: smooth;
 }
 
@@ -25,12 +27,21 @@ a {
     vertical-align: middle;
     cursor: pointer;
     -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
     border: 2px solid #bfef4b;
+    -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+        border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    -moz-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+        border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    -o-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+        border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
         border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-    border-radius: 50px;
+    -webkit-border-radius: 50px;
+       -moz-border-radius: 50px;
+            border-radius: 50px;
 }
 
 .r_btn.fill {
@@ -62,6 +73,12 @@ a {
 
 .slider {
     position: relative;
+    background: -webkit-linear-gradient(left,
+            rgb(116, 96, 230) 0%,
+            rgb(68, 52, 156) 100%);
+    background: -moz-linear-gradient(left,
+            rgb(116, 96, 230) 0%,
+            rgb(68, 52, 156) 100%);
     background: linear-gradient(to left,
             rgb(116, 96, 230) 0%,
             rgb(68, 52, 156) 100%);
@@ -83,11 +100,11 @@ a {
     height: 100%;
     max-width: 380px;
     -webkit-object-fit: contain;
-    -o-object-fit: contain;
-    object-fit: contain;
+       -o-object-fit: contain;
+          object-fit: contain;
     -webkit-object-position: center;
-    -o-object-position: center;
-    object-position: center;
+       -o-object-position: center;
+          object-position: center;
 }
 
 .slider .i-frame img {
@@ -107,8 +124,12 @@ header {
     width: 100%;
     border-bottom: 1px solid transparent;
     background-color: transparent;
-    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+            backdrop-filter: blur(20px);
     height: 80px;
+    -webkit-transition: all ease-in-out 0.2s;
+    -moz-transition: all ease-in-out 0.2s;
+    -o-transition: all ease-in-out 0.2s;
     transition: all ease-in-out 0.2s;
 }
 
@@ -158,7 +179,11 @@ header.scroll {
 }
 
 .ht-wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
     justify-content: flex-end;
     margin-right: -24px;
 }
@@ -169,12 +194,20 @@ header.scroll {
 }
 
 header .nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
     justify-content: flex-end;
 }
 
 a.logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     height: 100%;
     align-items: center;
@@ -182,6 +215,8 @@ a.logo {
 }
 
 a.logo span {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     height: 100%;
     align-items: center;
@@ -201,9 +236,13 @@ header.scroll a.logo span {
 }
 
 .h_nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin: 0;
     padding: 0;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
     justify-content: end;
 }
 
@@ -270,13 +309,23 @@ header.scroll .h_nav>li>a {
 }
 
 .product-sect4 {
+    background: -webkit-linear-gradient(left,
+            rgb(116, 96, 230) 0%,
+            rgb(68, 52, 156) 100%);
+    background: -moz-linear-gradient(left,
+            rgb(116, 96, 230) 0%,
+            rgb(68, 52, 156) 100%);
     background: linear-gradient(to left,
             rgb(116, 96, 230) 0%,
             rgb(68, 52, 156) 100%);
 }
 
 .contact_container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
@@ -316,7 +365,8 @@ footer .container {
 
 footer .footer-row {
     width: 100%;
-
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     gap: 24px;
 }
@@ -327,10 +377,14 @@ footer .footer-col {
 }
 
 footer .footer-col.flx-1 {
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 auto;
     flex: 1;
 }
 
 footer .footer-col.flx-2 {
+    -webkit-box-flex: 2;
+    -ms-flex: 2 0 auto;
     flex: 2;
 }
 
@@ -414,6 +468,8 @@ footer .logo span {
 }
 
 footer .footer-bottom {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin-top: 40px;
     border-top: 1px solid #313238;
@@ -429,8 +485,14 @@ footer .footer-bottom .left-col {
 }
 
 footer .footer-bottom .right-col {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 auto;
     flex: 1 0 auto;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
     justify-content: flex-end;
 }
 
@@ -462,7 +524,12 @@ footer .footer-bottom p {
 }
 
 footer .contact {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     gap: 12px;
 }
@@ -507,9 +574,16 @@ footer .contact .cont-cell .c_text span a {
 }
 
 .sl-text {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     height: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
 }
 
@@ -526,13 +600,22 @@ footer .contact .cont-cell .c_text span a {
 }
 
 .cards_area {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     gap: 24px;
     justify-content: center;
 }
 
 .page_banner {
+    background: -webkit-linear-gradient(left,
+            rgb(116, 96, 230) 0%,
+            rgb(68, 52, 156) 100%);
+    background: -moz-linear-gradient(left,
+            rgb(116, 96, 230) 0%,
+            rgb(68, 52, 156) 100%);
     background: linear-gradient(to left,
             rgb(116, 96, 230) 0%,
             rgb(68, 52, 156) 100%);
@@ -565,31 +648,52 @@ footer .contact .cont-cell .c_text span a {
 }
 
 .inner_card {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     background: #7460e6;
     padding: 20px;
-    box-shadow: 0 8px 16px 0 #00000014;
+    -webkit-box-shadow: 0 8px 16px 0 #00000014;
+            box-shadow: 0 8px 16px 0 #00000014;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
-    border-radius: 20px;
+    -webkit-border-radius: 20px;
+       -moz-border-radius: 20px;
+            border-radius: 20px;
     height: 100%;
     margin: 0px 20px;
 }
 
 .inner_card .card_logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 100%;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
 .inner_card .card_logo figure {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     background: #f3f3f3;
     width: 100px;
     height: 100px;
-    box-shadow: 0 8px 16px 0 #00000014;
+    -webkit-box-shadow: 0 8px 16px 0 #00000014;
+            box-shadow: 0 8px 16px 0 #00000014;
     padding: 20px;
-    border-radius: 50%;
+    -webkit-border-radius: 50%;
+       -moz-border-radius: 50%;
+            border-radius: 50%;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     margin-bottom: 22px;
 }
@@ -600,8 +704,13 @@ footer .contact .cont-cell .c_text span a {
 }
 
 .inner_card .card_cont {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     flex: 0 1 auto;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     padding-left: 20px;
 }
@@ -622,7 +731,10 @@ footer .contact .cont-cell .c_text span a {
 }
 
 .feat_box_cont {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
 }
 
@@ -659,21 +771,35 @@ span.rght {
 }
 
 .cheklists {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
 .cheklists .c_list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     max-width: 510px;
     align-items: flex-start;
     margin-bottom: 20px;
     background: #eeffe0;
-    box-shadow: 4px 4px 0 #e0e0e0;
+    -webkit-box-shadow: 4px 4px 0 #e0e0e0;
+            box-shadow: 4px 4px 0 #e0e0e0;
     padding: 20px;
-    border-radius: 8px;
+    -webkit-border-radius: 8px;
+       -moz-border-radius: 8px;
+            border-radius: 8px;
 }
 
 .cheklists .c_list img {
@@ -687,16 +813,26 @@ span.rght {
 }
 
 .f_box {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     background: #fff;
     padding: 24px;
-    border-radius: 20px;
-    box-shadow: 0 8px 16px 0 #00000014;
+    -webkit-border-radius: 20px;
+       -moz-border-radius: 20px;
+            border-radius: 20px;
+    -webkit-box-shadow: 0 8px 16px 0 #00000014;
+            box-shadow: 0 8px 16px 0 #00000014;
     height: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
 }
 
 .b_img {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -725,10 +861,17 @@ span.rght {
 }
 
 .logo_ref_area {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     background: #f8f8f8;
     padding: 24px;
-    border-radius: 20px;
+    -webkit-border-radius: 20px;
+       -moz-border-radius: 20px;
+            border-radius: 20px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
 }
 
@@ -840,7 +983,8 @@ header.scroll .mobile-nav .nav_button {
     left: 100%;
     display: flex;
     flex-direction: column;
-    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+            backdrop-filter: blur(20px);
     transition: all ease-in-out 0.3s;
     opacity: 0;
 }
@@ -926,6 +1070,9 @@ header.scroll .mobile-nav .nav_button {
     }
 
     .contact_container {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
         align-items: baseline;
         gap: 54px;
@@ -936,6 +1083,7 @@ header.scroll .mobile-nav .nav_button {
     }
 
     footer .footer-row {
+        -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     }
 
@@ -945,6 +1093,7 @@ header.scroll .mobile-nav .nav_button {
     }
 
     footer .footer-bottom {
+        -ms-flex-wrap: wrap;
         flex-wrap: wrap;
         justify-content: center;
     }
